--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=No es pot carregar: Fitxer no trobat
 ERROR_CORRUPT_SONG_NO_NOTES=No es pot carregar: No s'han trobat notes
 ERROR_CORRUPT_SONG_NO_BREAKS=No es pot carregar: No s'han trobat línies
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=No es pot carregar: Error llegint línia %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Jugador %d s'assigna a diversos micròfons. Comproveu les opcions del micròfon.
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Jugador %d no està assignat a un micròfon. Comproveu les opcions del micròfon.
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Jugador %d s'assigna a diversos micròfons\n\n Comproveu les opcions del micròfon.
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Jugador %d no està assignat a un micròfon\n\n Comproveu les opcions del micròfon.
 
 ;# ---------------------------
 ;#  -- COMMON TRANSLATIONS --
