--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Laulu pole võimalik laadida: Faili ei leitud
 ERROR_CORRUPT_SONG_NO_NOTES=Laulu pole võimalik laadida: Ei leia noote
 ERROR_CORRUPT_SONG_NO_BREAKS=Laulu pole võimalik laadida: Ei leia reavahetusi
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Laulu pole võimalik laadida: Viga sõelumisel %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Mängija %d on seotud mitme mikrofoniga. Palun vaata üle mikrofoni seaded
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Mängija %d ei ole seotud mikrofoniga. Palun vaata üle mikrofoni seaded
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Mängija %d on seotud mitme mikrofoniga\n\n Palun vaata üle mikrofoni seaded
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Mängija %d ei ole seotud mikrofoniga\n\n Palun vaata üle mikrofoni seaded
 
 ;# ---------------------------
 ;#  -- COMMON TRANSLATIONS --
