--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Chargement impossible : Fichier non trouvé
 ERROR_CORRUPT_SONG_NO_NOTES=Chargement impossible : Pas de partition trouvée
 ERROR_CORRUPT_SONG_NO_BREAKS=Chargement impossible : Saut de ligne introuvable
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Chargement impossible : Erreur analyseur à la ligne %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Plusieurs micros sont attribués au joueur %d. Merci de vérifier vos options de microphone
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Aucun micro n'est attribué au joueur %d. Merci de vérifier vos options de microphone
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Plusieurs micros sont attribués au joueur %d\n\n Merci de vérifier vos options de microphone
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Aucun micro n'est attribué au joueur %d\n\n Merci de vérifier vos options de microphone
 
 ;COMMON TRANSLATIONS:
 
