--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Imposible cargar a canción: Arquivo non atopa
 ERROR_CORRUPT_SONG_NO_NOTES=Imposible cargar a canción: Non se atopan as notas
 ERROR_CORRUPT_SONG_NO_BREAKS=Imposible cargar a canción: Non se atopan interrupcións de liña
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Imposible cargar a canción: Erro durante o parsing da liña %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Asignaronse máis dun micrófono ó xogador %d. Comproba as opcións de micrófonos.
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Ó xogador %d non se lle asignou ningún micrófono. Comproba as opcións de micrófonos.ç
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Asignaronse máis dun micrófono ó xogador %d\n\n Comproba as opcións de micrófonos.
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Ó xogador %d non se lle asignou ningún micrófono\n\n Comproba as opcións de micrófonos.ç
 
 ;COMMON TRANSLATIONS:
 
