--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Impossibile aprire la canzone: file non trovat
 ERROR_CORRUPT_SONG_NO_NOTES=Impossibile aprire la canzone: note non trovate, correggere il file .txt!
 ERROR_CORRUPT_SONG_NO_BREAKS=Impossibile aprire la canzone: nessuna pausa trovata, correggere il file .txt!
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Impossibile aprire la canzone: errore durante l'interpretazione della linea %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Il giocatore %d è assegnato a più microfoni. Per favore, selezionare un canale libero!
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Il giocatore %d non è assegnato ad un microfono. Per favore, selezionare un canale nelle opzioni del microfono.
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Il giocatore %d è assegnato a più microfoni\n\n Per favore, selezionare un canale libero!
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Il giocatore %d non è assegnato ad un microfono\n\n Per favore, selezionare un canale nelle opzioni del microfono
 
 ;COMMON TRANSLATIONS:
 
