--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG=Sangen kunne ikke lastes
 ;TODO: ERROR_CORRUPT_SONG_NO_NOTES=Song could not be loaded: Can''t find any notes
 ;TODO: ERROR_CORRUPT_SONG_NO_BREAKS=Song could not be loaded: Can''t find any linebreaks
 ;TODO: ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Spiller %d er tilordnet flere mikrofoner. Vennligst sjekk mikrofonene dine
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Spiller %d er ikke tilordnet en mikrofon. Vennligst sjekk mikrofonene dine
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Spiller %d er tilordnet flere mikrofoner\n\n Vennligst sjekk mikrofonene dine
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Spiller %d er ikke tilordnet en mikrofon\n\n Vennligst sjekk mikrofonene dine
 
 ;COMMON TRANSLATIONS:
 
