--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=A canção não foi encontrada!
 ERROR_CORRUPT_SONG_NO_NOTES=A canção não tem notas!
 ERROR_CORRUPT_SONG_NO_BREAKS=A canção não tem quebras de linha!
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Erro durante o parsing da linha %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=O Jogador %d está atribuído a vários microfones. Por favor verifique as opções de microfone!
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=O Jogador %d não está atribuído a nenhum microfone. Por favor verifique as opções de microfone!
+ERROR_PLAYER_DEVICE_ASSIGNMENT=O Jogador %d está atribuído a vários microfones\n\n Por favor verifique as opções de microfone!
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=O Jogador %d não está atribuído a nenhum microfone\n\n Por favor verifique as opções de microfone!
 
 ;COMMON TRANSLATIONS:
 
