--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Песня не может быть загру
 ERROR_CORRUPT_SONG_NO_NOTES=Песня не может быть загружена: Невозможно найти ноты
 ERROR_CORRUPT_SONG_NO_BREAKS=Песня не может быть загружена: Невозможно найти разделители строк
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Песня не может быть загружена: Ошибка обработки строки %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Игроку %d назначено несколько микрофонов. Проверьте настройки микрофона
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Игроку %d не назначено ни одного микрофона. Проверьте настройки микрофона
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Игроку %d назначено несколько микрофонов\n\n Проверьте настройки микрофона
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Игроку %d не назначено ни одного микрофона\n\n Проверьте настройки микрофона
 
 ;COMMON TRANSLATIONS:
 
