--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Imposibil de încărcat cântecul: Fişierul n
 ERROR_CORRUPT_SONG_NO_NOTES=Nu pot încărca cântecul: Nu există note
 ERROR_CORRUPT_SONG_NO_BREAKS=Nu pot încărca cântecul: Nu sunt pauze de linie
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Imposibil de încărcat cântecul: Eroare în analiza liniei %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Jucătorului %d i s-au atribuit mai multe microfoane. Verifică opţiunile de microfon.
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Jucătorului %d nu i s-a atribuit nici un microfon. Verifică opţiunile de microfon.
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Jucătorului %d i s-au atribuit mai multe microfoane\n\n Verifică opţiunile de microfon.
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Jucătorului %d nu i s-a atribuit nici un microfon\n\n Verifică opţiunile de microfon.
 
 ;COMMON TRANSLATIONS:
 
