--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Ne morem naložiti pesmi: Ne najdem datoteke
 ERROR_CORRUPT_SONG_NO_NOTES=Ne morem naloziti pesmi: Ne najdem not.
 ERROR_CORRUPT_SONG_NO_BREAKS=Ne morem naložiti pesmi: Ne najdem prelomov vrstic.
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Ne morem naložiti pesmi: Napaka v parsanju vrstice %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Igralec %d je dodeljena več mikrofonom. Preverite možnosti mikrofona
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Igralec %d ni dodeljen mikrofonu. Preverite možnosti mikrofona
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Igralec %d je dodeljena več mikrofonom\n\n Preverite možnosti mikrofona
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Igralec %d ni dodeljen mikrofonu\n\n Preverite možnosti mikrofona
 
 ;COMMON TRANSLATIONS:
 
