--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Kappaletta ei voitu avata: Tiedostoa ei löyty
 ERROR_CORRUPT_SONG_NO_NOTES=Kappaletta ei voitu avata: Ei löytynyt yhtään nuottia
 ERROR_CORRUPT_SONG_NO_BREAKS=Kappaletta ei voitu avata: Ei löytynyt yhtään rivinvaihtoa
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Kappaletta ei voitu avata: Virhe jäsentäessä riviä %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Pelaaja %d is assigned to multiple microphones. Tarkista mikrofoniasetukset
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Pelaaja %d is not assigned to a microphones. Tarkista mikrofoniasetukset
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Pelaaja %d is assigned to multiple microphones\n\n Tarkista mikrofoniasetukset
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Pelaaja %d is not assigned to a microphones\n\n Tarkista mikrofoniasetukset
 
 ;COMMON TRANSLATIONS:
 
