--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Låten kunde inte laddas: Filen kunde inte hit
 ERROR_CORRUPT_SONG_NO_NOTES=Låten kunde inte laddas: Kan inte hitta toner
 ERROR_CORRUPT_SONG_NO_BREAKS=Låten kunde inte laddas: Kan inte hitta radbrytningar
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Låten kunde inte laddas: Fel på rad %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Spelare %d är tilldelad flera mikrofoner. Kontrollera dina mikrofonalternativ
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Spelare %d är inte tilldelad en mikrofon. Kontrollera dina mikrofonalternativ
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Spelare %d är tilldelad flera mikrofoner\n\n Kontrollera dina mikrofonalternativ
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Spelare %d är inte tilldelad en mikrofon\n\n Kontrollera dina mikrofonalternativ
 
 ;COMMON TRANSLATIONS:
 
