--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Ekki var hægt að hlaða inn lagi:  Skrá fin
 ERROR_CORRUPT_SONG_NO_NOTES=Ekki var hægt að hlaða inn lagi: Finn engar nótur
 ERROR_CORRUPT_SONG_NO_BREAKS=Ekki var hægt að hlaða inn lagi: Finn engar línuskiptingar
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Ekki var hægt að hlaða inn lagi: Villa við þáttun línu %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Leikmaður %d er úthlutað til margra hljóðnema. Athugaðu hljóðnemann valkosti þína
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Leikmaður %d er ekki úthlutað í hljóðnema. Athugaðu hljóðnemann valkosti þína
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Leikmaður %d er úthlutað til margra hljóðnema\n\n Athugaðu hljóðnemann valkosti þína
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Leikmaður %d er ekki úthlutað í hljóðnema\n\n Athugaðu hljóðnemann valkosti þína
 
 ;COMMON TRANSLATIONS:
 
