--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Skladbu se nepodařilo načíst: Soubor nenale
 ERROR_CORRUPT_SONG_NO_NOTES=Skladbu se nepodařilo načíst: Noty nenalezeny
 ERROR_CORRUPT_SONG_NO_BREAKS=Skladbu se nepodařilo načíst: Nenalezeny informace o rozdělení do řádků
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Skladbu se nepodařilo načíst: Chyba při zpracování řádku %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Hráč %d je přiřazen k vícero mikrofonům. Zkontrolujte možnosti mikrofonu
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Hráč %d není přiřazen k mikrofonu. Zkontrolujte možnosti mikrofonu
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Hráč %d je přiřazen k vícero mikrofonům\n\n Zkontrolujte možnosti mikrofonu
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Hráč %d není přiřazen k mikrofonu\n\n Zkontrolujte možnosti mikrofonu
 
 ;COMMON TRANSLATIONS:
 
