--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=无法载入歌曲：文件未找到
 ERROR_CORRUPT_SONG_NO_NOTES=无法载入歌曲：找不到任何注释
 ERROR_CORRUPT_SONG_NO_BREAKS=无法载入歌曲：找不到任何分秆
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=无法载入歌曲：行 %0:d 解析错误
-ERROR_PLAYER_DEVICE_ASSIGNMENT=玩家 %d 被指定给多个麦克风，请检查您的麦克风选项
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=玩家 %d 没有指定麦克风，请检查您的麦克风选项
+ERROR_PLAYER_DEVICE_ASSIGNMENT=玩家 %d 被指定给多个麦克风\n\n请检查您的麦克风选项
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=玩家 %d 没有指定麦克风\n\n请检查您的麦克风选项
 
 ;COMMON TRANSLATIONS:
 
