--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Song could not be loaded: File not found
 ERROR_CORRUPT_SONG_NO_NOTES=Song could not be loaded: Can''t find any notes
 ERROR_CORRUPT_SONG_NO_BREAKS=Song could not be loaded: Can''t find any linebreaks
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones. Please check your microphone options
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your microphone options
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones\n\n Please check your microphone options
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone\n\n Please check your microphone options
 
 ;# ---------------------------
 ;#  -- COMMON TRANSLATIONS --
