--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Cha b’ urrainn dhuinn an t-òran a luchdadh:
 ERROR_CORRUPT_SONG_NO_NOTES=Cha b’ urrainn dhuinn an t-òran a luchdadh: Cha deach pong a lorg
 ERROR_CORRUPT_SONG_NO_BREAKS=Cha b’ urrainn dhuinn an t-òran a luchdadh: Cha deach brisidhean loidhne a lorg
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Cha b’ urrainn dhuinn an t-òran a luchdadh: Mearachd e parsadh na loidhne %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Chaidh iomadh micreofon a shònrachadh dha chluicheadair %d. Thoir sùil air na roghainnean microfòn agad
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Cha deach micreofon a shònrachadh dha chluicheadair %d. Thoir sùil air na roghainnean microfòn agad
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Chaidh iomadh micreofon a shònrachadh dha chluicheadair %d\n\n Thoir sùil air na roghainnean microfòn agad
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Cha deach micreofon a shònrachadh dha chluicheadair %d\n\n Thoir sùil air na roghainnean microfòn agad
 
 ;COMMON TRANSLATIONS:
 
