--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Το τραγούδι δεν ήταν δυνα
 ERROR_CORRUPT_SONG_NO_NOTES=Το τραγούδι δεν ήταν δυνατό να φορτώσει: Δεν βρέθηκαν νότες
 ERROR_CORRUPT_SONG_NO_BREAKS=Το τραγούδι δεν ήταν δυνατό να φορτώσει: Δεν βρέθηκαν κενά ανάμεσα στις νότες
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Το τραγούδι δεν ήταν δυνατό να φορτώσει: Λάθος στην επικόληση της γραμμής %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Παίχτης %d έχει εκχωρηθεί σε πολλαπλά μικρόφωνα. Ελέγξτε τις επιλογές μικροφώνου σας
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Παίχτης %d δεν έχει αντιστοιχιστεί σε ένα μικρόφωνο. Ελέγξτε τις επιλογές μικροφώνου σας
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Παίχτης %d έχει εκχωρηθεί σε πολλαπλά μικρόφωνα\n\n Ελέγξτε τις επιλογές μικροφώνου σας
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Παίχτης %d δεν έχει αντιστοιχιστεί σε ένα μικρόφωνο\n\n Ελέγξτε τις επιλογές μικροφώνου σας
 
 ;COMMON TRANSLATIONS:
 
