--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -623,8 +623,8 @@ ERROR_CORRUPT_SONG=Pesma se ne moze ucitati.
 ;TODO: ERROR_CORRUPT_SONG_NO_NOTES=Song could not be loaded: Can''t find any notes
 ;TODO: ERROR_CORRUPT_SONG_NO_BREAKS=Song could not be loaded: Can''t find any linebreaks
 ;TODO: ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
-ERROR_PLAYER_DEVICE_ASSIGNMENT=Играч %d додељује се вишеструким микрофонима. Проверите опције микрофона
-ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Играч %d није додељен микрофону. Проверите опције микрофона
+ERROR_PLAYER_DEVICE_ASSIGNMENT=Играч %d додељује се вишеструким микрофонима\n\n Проверите опције микрофона
+ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Играч %d није додељен микрофону\n\n Проверите опције микрофона
 
 ;COMMON TRANSLATIONS:
 
