statistics redesign part2

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Estadístiques detallades
 STAT_NEXT=Següent pàgina
 STAT_PREV=Pàgina anterior
 STAT_REVERSE=Ordre invers
-STAT_PAGE=%0:d de %1:d Pàgines\n Entrades %2:d de %3:d
+STAT_PAGE=%0:d de %1:d Pàgines\n\n Entrades %2:d de %3:d
 
 STAT_DESC_SCORES=Màximes puntuacions
 STAT_DESC_SCORES_REVERSED=Mínimes puntuacions
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Millors cantants
 STAT_DESC_SINGERS_REVERSED=Pitjors cantants
-STAT_FORMAT_SINGERS=%0:s \n Puntuació mitjana: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Puntuació mitjana: %1:d
 
 STAT_DESC_SONGS=Cançons més populars
 STAT_DESC_SONGS_REVERSED=Cançons menys populars
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx cantades
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx cantades
 
 STAT_DESC_BANDS=Grups més populars
 STAT_DESC_BANDS_REVERSED=Grups menys populars
-STAT_FORMAT_BANDS=%0:s \n %1:dx Cantades
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx Cantades
 
 PARTY_SELECT_MODE=Mode
 PARTY_MODE_CLASSIC=Clàssic
