--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Detailsem statistika
 STAT_NEXT=Järgmine lehekülg
 STAT_PREV=Eelmine lehekülg
 STAT_REVERSE=Vaheta järjekorda
-STAT_PAGE=Lehekülg %0:d of %1:d\nSisestused %2:d of %3:d
+STAT_PAGE=Lehekülg %0:d of %1:d\n\n Sisestused %2:d of %3:d
 
 STAT_DESC_SCORES=Kõrged skoorid
 STAT_DESC_SCORES_REVERSED=Madalad skoorid
-STAT_FORMAT_SCORES=%0:s - %1:d [%2:s] %5:s\n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d [%2:s] %5:s\n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Parimad lauljad
 STAT_DESC_SINGERS_REVERSED=Halvimad lauljad
-STAT_FORMAT_SINGERS=%0:s\nKeskmine skoor: %1:d
+STAT_FORMAT_SINGERS=%0:s\n\n Keskmine skoor: %1:d
 
 STAT_DESC_SONGS=Kõige populaarsemad laulud
 STAT_DESC_SONGS_REVERSED=Vähem populaarsed laulud
-STAT_FORMAT_SONGS=%0:s - %1:s\n %2:dx laulis
+STAT_FORMAT_SONGS=%0:s - %1:s\n\n %2:dx laulis
 
 STAT_DESC_BANDS=Kõige populaarsemad bändid
 STAT_DESC_BANDS_REVERSED=Vähem populaarsed bändid
-STAT_FORMAT_BANDS=%0:s \n%1:dx Laulis
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx Laulis
 
 PARTY_SELECT_MODE=Režiim
 PARTY_MODE_CLASSIC=Klassikaline
