--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Detail statistics
 STAT_NEXT=Next page
 STAT_PREV=Previous page
 STAT_REVERSE=Reverse order
-STAT_PAGE=Page %0:d of %1:d \n Entries %2:d of %3:d
+STAT_PAGE=Page %0:d of %1:d \n\n Entries %2:d of %3:d
 
 STAT_DESC_SCORES=HighScores
 STAT_DESC_SCORES_REVERSED=LowScores
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Best singers
 STAT_DESC_SINGERS_REVERSED=Worst singers
-STAT_FORMAT_SINGERS=%0:s \n Average score: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Average score: %1:d
 
 STAT_DESC_SONGS=Most popular songs
 STAT_DESC_SONGS_REVERSED=Least popular songs
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx sung
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx sung
 
 STAT_DESC_BANDS=Most popular bands
 STAT_DESC_BANDS_REVERSED=Least popular bands
-STAT_FORMAT_BANDS=%0:s \n %1:dx Sung
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx Sung
 
 PARTY_SELECT_MODE=Mode
 PARTY_MODE_CLASSIC=Classic
