--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Estadísticas detalladas
 STAT_NEXT=Siguiente
 STAT_PREV=Anterior
 STAT_REVERSE=Invertir el orden
-STAT_PAGE=Página %0:d de %1:d \n Registros %2:d de %3:d
+STAT_PAGE=Página %0:d de %1:d \n\n Registros %2:d de %3:d
 
 STAT_DESC_SCORES=Calificaciones
 STAT_DESC_SCORES_REVERSED=Peores Calificaciones
-STAT_FORMAT_SCORES=%0:s - %1:d puntos [%2:s] el %5:s \n%3:s - %4:s
+STAT_FORMAT_SCORES=%0:s - %1:d puntos [%2:s] el %5:s \n\n %3:s - %4:s
 
 STAT_DESC_SINGERS=Cantantes
 STAT_DESC_SINGERS_REVERSED=Peores cantantes
-STAT_FORMAT_SINGERS=%0:s \n Promedio: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Promedio: %1:d
 
 STAT_DESC_SONGS=Lo más cantado
 STAT_DESC_SONGS_REVERSED=Lo menos cantado
-STAT_FORMAT_SONGS=%0:s - %1:s \n cantado %2:d veces
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n cantado %2:d veces
 
 STAT_DESC_BANDS=Grupos populares
 STAT_DESC_BANDS_REVERSED=Grupos menos cantados
-STAT_FORMAT_BANDS=%0:s \n cantado %1:d veces
+STAT_FORMAT_BANDS=%0:s \n\n cantado %1:d veces
 
 PARTY_SELECT_MODE=Modo
 PARTY_MODE_CLASSIC=Clásico
