--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Stadastaireachd
 STAT_NEXT=An ath-dhuilleag
 STAT_PREV=An duilleag roimhpe
 STAT_REVERSE=Òrdugh contrarra
-STAT_PAGE=Duilleag %0:d à %1:d \n Innteart %2:d à %3:d
+STAT_PAGE=Duilleag %0:d à %1:d \n\n Innteart %2:d à %3:d
 
 STAT_DESC_SCORES=Sgòran àrda
 STAT_DESC_SCORES_REVERSED=Sgòran ìosal
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Air seinn as fhearr
 STAT_DESC_SINGERS_REVERSED=Air seinn as miosa
-STAT_FORMAT_SINGERS=%0:s \nSgòr cuibheasach: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\nSgòr cuibheasach: %1:d
 
 STAT_DESC_SONGS=Òrain fhèillmhor
 STAT_DESC_SONGS_REVERSED=Òrain nach do chòrd
-STAT_FORMAT_SONGS=%0:s - %1:s \nChaidh a sheinn %2:d turas/tursan
+STAT_FORMAT_SONGS=%0:s - %1:s \n\nChaidh a sheinn %2:d turas/tursan
 
 STAT_DESC_BANDS=Còmhlanan fèillmhor
 STAT_DESC_BANDS_REVERSED=Còmhlanan nach do chòrd
-STAT_FORMAT_BANDS=%0:s \nChaidh a sheinn %1:d turas/tursan
+STAT_FORMAT_BANDS=%0:s \n\nChaidh a sheinn %1:d turas/tursan
 
 PARTY_SELECT_MODE=Modh
 PARTY_MODE_CLASSIC=Clasaigeach
