--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Detaljna statistika
 STAT_NEXT=Sljed. strana
 STAT_PREV=Preth. strana
 STAT_REVERSE=Obrnuti redoslijed
-STAT_PAGE=Strana %0:d od %1:d \n Unosa %2:d od %3:d
+STAT_PAGE=Strana %0:d od %1:d \n\n Unosa %2:d od %3:d
 
 STAT_DESC_SCORES=HighScores
 STAT_DESC_SCORES_REVERSED=LowScores
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Najbolji pjevači
 STAT_DESC_SINGERS_REVERSED=Najgori pjevači
-STAT_FORMAT_SINGERS=%0:s \n Prosječni bodovi: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Prosječni bodovi: %1:d
 
 STAT_DESC_SONGS=Popularne pjesme
 STAT_DESC_SONGS_REVERSED=Nepopularne pjesme
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx otpjevano
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx otpjevano
 
 STAT_DESC_BANDS=Popularni bendovi
 STAT_DESC_BANDS_REVERSED=Nepopularni bendovi
-STAT_FORMAT_BANDS=%0:s \n %1:dx otpjevano
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx otpjevano
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
