--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Dettagli Statistiche
 STAT_NEXT=Prossima Pagina
 STAT_PREV=Pagina Precedente
 STAT_REVERSE=Ordine Inverso
-STAT_PAGE=Pagina %0:d di %1:d \n Inserimenti %2:d di %3:d
+STAT_PAGE=Pagina %0:d di %1:d \n\n Inserimenti %2:d di %3:d
 
 STAT_DESC_SCORES=Punteggi alti
 STAT_DESC_SCORES_REVERSED=Punteggi bassi
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Cantanti migliori
 STAT_DESC_SINGERS_REVERSED=Cantanti peggiori
-STAT_FORMAT_SINGERS=%0:s \n Punteggio medio: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Punteggio medio: %1:d
 
 STAT_DESC_SONGS=Canzoni più popolari
 STAT_DESC_SONGS_REVERSED=Canzoni meno popolari
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx Cantate
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx Cantate
 
 STAT_DESC_BANDS=Gli artisti più popolari
 STAT_DESC_BANDS_REVERSED=Gli artisti meno popolari
-STAT_FORMAT_BANDS=%0:s \n %1:dx cantate
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx cantate
 
 PARTY_SELECT_MODE=Modalità
 PARTY_MODE_CLASSIC=Classica
