--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -539,23 +539,23 @@ STAT_DETAIL=Statistika
 STAT_NEXT=Kitas puslapis
 STAT_PREV=Ankstesnis puslapis
 STAT_REVERSE=Atvirkštinė tvarka
-;TODO: STAT_PAGE=Page %0:d of %1:d \n Entries %2:d of %3:d
+;TODO: STAT_PAGE=Page %0:d of %1:d \n\n Entries %2:d of %3:d
 
 ;TODO: STAT_DESC_SCORES=HighScores
 ;TODO: STAT_DESC_SCORES_REVERSED=LowScores
-;TODO: STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+;TODO: STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Geriausi dainininkai
 ;TODO: STAT_DESC_SINGERS_REVERSED=Worst singers
-;TODO: STAT_FORMAT_SINGERS=%0:s \n Average score: %1:d
+;TODO: STAT_FORMAT_SINGERS=%0:s \n\n Average score: %1:d
 
 STAT_DESC_SONGS=Populiariausi dainos
 ;TODO: STAT_DESC_SONGS_REVERSED=Least popular songs
-;TODO: STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx sung
+;TODO: STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx sung
 
 ;TODO: STAT_DESC_BANDS=Most popular bands
 ;TODO: STAT_DESC_BANDS_REVERSED=Least popular bands
-;TODO: STAT_FORMAT_BANDS=%0:s \n %1:dx Sung
+;TODO: STAT_FORMAT_BANDS=%0:s \n\n %1:dx Sung
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
