--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Detailléiert Statistiken
 STAT_NEXT=Nächst Säit
 STAT_PREV=Vireg Säit
 STAT_REVERSE=Ëmkéieren
-STAT_PAGE=Säit %0:d/%1:d \n Antrag %2:d vun %3:d
+STAT_PAGE=Säit %0:d/%1:d \n\n Antrag %2:d vun %3:d
 
 STAT_DESC_SCORES=Highscore
 STAT_DESC_SCORES_REVERSED=Schlechtst Punkten
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Beschte Sänger
 STAT_DESC_SINGERS_REVERSED=Schlechtst Sänger
-STAT_FORMAT_SINGERS=%0:s \n Duerchschnëttlech Punktenzuel: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Duerchschnëttlech Punktenzuel: %1:d
 
 STAT_DESC_SONGS=Lieblings Lidder
 STAT_DESC_SONGS_REVERSED=Onbeléiftsten Lidder
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx gesongen
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx gesongen
 
 STAT_DESC_BANDS=Lieblings Band
 STAT_DESC_BANDS_REVERSED=Onbeléiftsten Band
-STAT_FORMAT_BANDS=%0:s \n Lidder gesongen: %1:d
+STAT_FORMAT_BANDS=%0:s \n\n Lidder gesongen: %1:d
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
