--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Statystyki szczegółowe
 STAT_NEXT=Następna strona
 STAT_PREV=Poprzednia strona
 STAT_REVERSE=Odwróć kolejność
-STAT_PAGE=Strona %0:d z %1:d \n Wpisów %2:d z %3:d
+STAT_PAGE=Strona %0:d z %1:d \n\n Wpisów %2:d z %3:d
 
 STAT_DESC_SCORES=Najwyższe wyniki
 STAT_DESC_SCORES_REVERSED=Najniższe wyniki
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Najlepsi
 STAT_DESC_SINGERS_REVERSED=Najgorsi
-STAT_FORMAT_SINGERS=%0:s \n Średni wynik: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Średni wynik: %1:d
 
 STAT_DESC_SONGS=Najpopularniejsze \n piosenki
 STAT_DESC_SONGS_REVERSED=Najmniej popularne piosenki
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx śpiewane
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx śpiewane
 
 STAT_DESC_BANDS=Najpopularniejsi \n wykonawcy
 STAT_DESC_BANDS_REVERSED=Najmniej popularni wykonawcy
-STAT_FORMAT_BANDS=%0:s \n %1:dx śpiewani
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx śpiewani
 
 PARTY_SELECT_MODE=Tryb
 PARTY_MODE_CLASSIC=Klasyczny
