--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -527,7 +527,7 @@ MODE_BLIND_DESC=Duel fără să vadă notele.
 
 STAT_MAIN=Statistici
 
-STAT_OVERVIEW_INTRO=%0:s \nStatistici \nUltima reinițiere pe %1:.2d.%2:.2d.%3:d
+STAT_OVERVIEW_INTRO=%0:s \n Statistici \nUltima reinițiere pe %1:.2d.%2:.2d.%3:d
 STAT_OVERVIEW_SONG=%0:d Cântece(%3:d cu video), dintre care %1:d deja au fost cântate și %2:d nu au fost cântate încă.\n Cântecul preferat este %4:s de %5:s.
 STAT_OVERVIEW_PLAYER=De la ultima reinițiere s-au înregistrat %0:d jucător(i) diferiți.\n Cel mai bun jucător este %1:s cu un punctaj mediu de %2:d puncte.\n %3:s a realizat cel mai bun punctaj cu %4:d puncte.
 
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Statistici detaliate
 STAT_NEXT=Următoarele
 STAT_PREV=Anterioare
 STAT_REVERSE=Schimbă ordinea
-STAT_PAGE=Pagina %0:d din %1:d \n Elemente %2:d din %3:d
+STAT_PAGE=Pagina %0:d din %1:d \n\n Elemente %2:d din %3:d
 
 STAT_DESC_SCORES=Top punctaje
 STAT_DESC_SCORES_REVERSED=Cele mai mici punctaje
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Top cântăreți
 STAT_DESC_SINGERS_REVERSED=Cei mai slabi cântăreți
-STAT_FORMAT_SINGERS=%0:s \n Punctaj mediu: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Punctaj mediu: %1:d
 
 STAT_DESC_SONGS=Cele mai cântate
 STAT_DESC_SONGS_REVERSED=Cele mai puțin cântate
-STAT_FORMAT_SONGS=%0:s - %1:s \n cântat de %2:d ori
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n cântat de %2:d ori
 
 STAT_DESC_BANDS=Top formații
 STAT_DESC_BANDS_REVERSED=Formații preferate
-STAT_FORMAT_BANDS=%0:s \n %1:dx cântat
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx cântat
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
