--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Podrobná štatistika
 STAT_NEXT=Ďalšia strana
 STAT_PREV=Predch. strana
 STAT_REVERSE=Otočiť poradie
-STAT_PAGE=%0:d. z %1:d strán \n %2:d z %3:d položiek
+STAT_PAGE=%0:d. z %1:d strán \n\n %2:d z %3:d položiek
 
 STAT_DESC_SCORES=Najvyššie skóre
 STAT_DESC_SCORES_REVERSED=Najhoršie skóre
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Najlepší speváci
 STAT_DESC_SINGERS_REVERSED=Najhorší speváci
-STAT_FORMAT_SINGERS=%0:s \n Priemer skóre: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Priemer skóre: %1:d
 
 STAT_DESC_SONGS=Najhranejšie skladby
 STAT_DESC_SONGS_REVERSED=Najmenej hrané skladby
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx spievaná
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx spievaná
 
 STAT_DESC_BANDS=Najhranejšia kapela
 STAT_DESC_BANDS_REVERSED=Najmenej hraná kapela
-STAT_FORMAT_BANDS=%0:s \n %1:dx spievaná
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx spievaná
 
 PARTY_SELECT_MODE=Režim
 PARTY_MODE_CLASSIC=Klasický
