--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Podrobna statistika
 STAT_NEXT=Naslednja stran
 STAT_PREV=Prejšnja stran
 STAT_REVERSE=Obratni vrstni red
-STAT_PAGE=Stran %0:d od %1:d \n Zapisov %2:d od %3:d
+STAT_PAGE=Stran %0:d od %1:d \n\n Zapisov %2:d od %3:d
 
 STAT_DESC_SCORES=Najboljši rezultati
 STAT_DESC_SCORES_REVERSED=Najslabši rezultati
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Najboljši igralec
 STAT_DESC_SINGERS_REVERSED=Najslabši igralec
-STAT_FORMAT_SINGERS=%0:s \n povprecni rezultat: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n povprecni rezultat: %1:d
 
 STAT_DESC_SONGS=Najbolj popularne pesmi
 STAT_DESC_SONGS_REVERSED=Najmanj popularne pesmi
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx igrano
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx igrano
 
 STAT_DESC_BANDS=Najbolj popularen izvajalec
 STAT_DESC_BANDS_REVERSED=Najmanj popularen izvajalec
-STAT_FORMAT_BANDS=%0:s \n %1:dx igrano
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx igrano
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
