--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Detaljerad statistik
 STAT_NEXT=Nästa sida
 STAT_PREV=Föregående sida
 STAT_REVERSE=Omvänd ordning
-STAT_PAGE=Sida %0:d av %1:d sidor \n %2:d av %3:d Poster
+STAT_PAGE=Sida %0:d av %1:d sidor \n\n %2:d av %3:d Poster
 
 STAT_DESC_SCORES=Högsta resultat
 STAT_DESC_SCORES_REVERSED=Lägsta resultat
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Bästa sångare
 STAT_DESC_SINGERS_REVERSED=Sämsta sångare
-STAT_FORMAT_SINGERS=%0:s \n genomsnittlig poäng: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n genomsnittlig poäng: %1:d
 
 STAT_DESC_SONGS=Populäraste låtarna
 STAT_DESC_SONGS_REVERSED=Minst populära låtarna
-STAT_FORMAT_SONGS=%0:s - %1:s \n Sjungen %2:dx gånger
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n Sjungen %2:dx gånger
 
 STAT_DESC_BANDS=Populäraste artisterna
 STAT_DESC_BANDS_REVERSED=Minst populära artisterna
-STAT_FORMAT_BANDS=%0:s \n %1:dx sjungna
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx sjungna
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
