--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Ítarleg Tölfræði
 STAT_NEXT=Næsta síða
 STAT_PREV=Fyrri síða
 STAT_REVERSE=Öfug röð
-STAT_PAGE=Blaðsíða %0:d af %1:d \n Færslum %2:d af %3:d
+STAT_PAGE=Blaðsíða %0:d af %1:d \n\n Færslum %2:d af %3:d
 
 STAT_DESC_SCORES=Hæstu stig
 STAT_DESC_SCORES_REVERSED=Lægstu stig
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Bestu söngvarar
 STAT_DESC_SINGERS_REVERSED=Verstu söngvarar
-STAT_FORMAT_SINGERS=%0:s \n Meðalstig: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Meðalstig: %1:d
 
 STAT_DESC_SONGS=Vinsælustu lög
 STAT_DESC_SONGS_REVERSED=Óvinsælustu lög
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx sungið
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx sungið
 
 STAT_DESC_BANDS=Vinsælustu hljómsveitir
 STAT_DESC_BANDS_REVERSED=Óvinsælustu hljómsveitir
-STAT_FORMAT_BANDS=%0:s \n %1:dx Sungið
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx Sungið
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
