--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Detalji Statistike
 STAT_NEXT=Sledeca Strana
 STAT_PREV=Prethodna Strana
 STAT_REVERSE=Obrnuti Redosled
-STAT_PAGE=Seite %0:d of %1:d strana \n %2:d od %3:d Unosa
+STAT_PAGE=Seite %0:d of %1:d strana \n\n %2:d od %3:d Unosa
 
 STAT_DESC_SCORES=NajboljiRezultati
 STAT_DESC_SCORES_REVERSED=NajgoriRezultati
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Najbolji Pevaci
 STAT_DESC_SINGERS_REVERSED=Najgori Pevaci
-STAT_FORMAT_SINGERS=%0:s \n Prosecan Rezultat: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Prosecan Rezultat: %1:d
 
 STAT_DESC_SONGS=Najpopularnije Pesme
 STAT_DESC_SONGS_REVERSED=Najmanje Popularne Pesme
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx pevano
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx pevano
 
 STAT_DESC_BANDS=Najpopularniji Bendovi
 STAT_DESC_BANDS_REVERSED=Najmanje Popularni Bendovi
-STAT_FORMAT_BANDS=%0:s \n %1:dx Pevano
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx Pevano
 
 ;TODO: PARTY_SELECT_MODE=Mode
 PARTY_MODE_CLASSIC=Цлассиц
