--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=統計の詳しい事
 STAT_NEXT=次ページ
 STAT_PREV=先ページ
 STAT_REVERSE=逆の順番
-STAT_PAGE= %1:d ページの %0:d 番目 \n %3:d エントリーの %2:d 番目
+STAT_PAGE= %1:d ページの %0:d 番目 \n\n %3:d エントリーの %2:d 番目
 
 STAT_DESC_SCORES=ハイスコア
 STAT_DESC_SCORES_REVERSED=ロースコア
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=ベスト・プレイヤー
 STAT_DESC_SINGERS_REVERSED=ワースト・プレイヤー
-STAT_FORMAT_SINGERS=%0:s \n 平均スコア： %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n 平均スコア： %1:d
 
 STAT_DESC_SONGS=一番人気ある曲
 STAT_DESC_SONGS_REVERSED=一番人気なし曲
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx 回歌った
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx 回歌った
 
 STAT_DESC_BANDS=一番人気ある歌手
 STAT_DESC_BANDS_REVERSED=一番人気ない歌手
-STAT_FORMAT_BANDS=%0:s \n %1:dx 回歌った
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx 回歌った
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
