--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Detaljerede Statestikker
 STAT_NEXT=Næste Side
 STAT_PREV=Tidligere Side
 STAT_REVERSE=Omvendt Orden
-STAT_PAGE=Seite %0:d of %1:d Pages \n Entries %2:d of %3:d
+STAT_PAGE=Seite %0:d of %1:d Pages \n\n Entries %2:d of %3:d
 
 STAT_DESC_SCORES=HighScore
 STAT_DESC_SCORES_REVERSED=LowScore
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Bedste Sangere
 STAT_DESC_SINGERS_REVERSED=Værste Sangere
-STAT_FORMAT_SINGERS=%0:s \n Average Score: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Average Score: %1:d
 
 STAT_DESC_SONGS=Mest Populære Sange
 STAT_DESC_SONGS_REVERSED=Mindst Populære Sange
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx sung
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx sung
 
 STAT_DESC_BANDS=Mest Populære Bands
 STAT_DESC_BANDS_REVERSED=Mindst Populære Bands
-STAT_FORMAT_BANDS=%0:s \n %1:dx Sung
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx Sung
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
