--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Detaillierte Statistiken
 STAT_NEXT=Nächste Seite
 STAT_PREV=Vorherige Seite
 STAT_REVERSE=Umkehren
-STAT_PAGE=Seite %0:d von %1:d \n Einträgen %2:d von %3:d
+STAT_PAGE=Seite %0:d von %1:d \n\n Einträgen %2:d von %3:d
 
 STAT_DESC_SCORES=Höchstpunktzahl
 STAT_DESC_SCORES_REVERSED=Niedrigste Punktzahl
-STAT_FORMAT_SCORES=%0:s - %1:d [%2:s] %5:s\n(%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d [%2:s] %5:s\n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Beste Sänger
 STAT_DESC_SINGERS_REVERSED=Schlechteste Sänger
-STAT_FORMAT_SINGERS=%0:s\nDurchschnittliche Punktzahl: %1:d
+STAT_FORMAT_SINGERS=%0:s\n\n Durchschnittliche Punktzahl: %1:d
 
 STAT_DESC_SONGS=Beliebteste Songs
 STAT_DESC_SONGS_REVERSED=Unbeliebteste Songs
-STAT_FORMAT_SONGS=%0:s - %1:s\n%2:dx gesungen
+STAT_FORMAT_SONGS=%0:s - %1:s\n\n %2:dx gesungen
 
 STAT_DESC_BANDS=Beliebteste Bands
 STAT_DESC_BANDS_REVERSED=Unbeliebteste Bands
-STAT_FORMAT_BANDS=%0:s\nGesungene Songs: %1:d
+STAT_FORMAT_BANDS=%0:s\n\n Gesungene Songs: %1:d
 
 PARTY_SELECT_MODE=Modus
 PARTY_MODE_CLASSIC=Standard
