--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Estatistika zehatzak
 STAT_NEXT=Hurrengo orria
 STAT_PREV=Aurreko orria
 STAT_REVERSE=Ordena alderanztu
-STAT_PAGE=Seite %0:d orri %1:d tik \n Tik %2:d sarrera %3:d
+STAT_PAGE=Seite %0:d orri %1:d tik \n\n Tik %2:d sarrera %3:d
 
 STAT_DESC_SCORES=Puntuazio onenak
 STAT_DESC_SCORES_REVERSED=Puntuazio txarrenak
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Jokalari onenak
 STAT_DESC_SINGERS_REVERSED=Jokalari txarrenak
-STAT_FORMAT_SINGERS=%0:s \n Batezbesteko puntuazioa: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Batezbesteko puntuazioa: %1:d
 
 STAT_DESC_SONGS=Abesti ospetsuak
 STAT_DESC_SONGS_REVERSED=Abesti ez ospetsuak
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx aldiz abestuta
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx aldiz abestuta
 
 STAT_DESC_BANDS=Talde ospetsuak
 STAT_DESC_BANDS_REVERSED=Talde ez ospetsuak
-STAT_FORMAT_BANDS=%0:s \n %1:dx aldiz abestuta
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx aldiz abestuta
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
