--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Statistiques détaillées
 STAT_NEXT=Page suiv.
 STAT_PREV=Page préc.
 STAT_REVERSE=Inverser
-STAT_PAGE=Page %0:d de %1:d \n Entrées %2:d sur %3:d
+STAT_PAGE=Page %0:d de %1:d \n\n Entrées %2:d sur %3:d
 
 STAT_DESC_SCORES=Meilleurs Scores
 STAT_DESC_SCORES_REVERSED=Pires scores
-STAT_FORMAT_SCORES=%0:s - %1:d [%2:s] \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d [%2:s] \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Meill. Chanteurs
 STAT_DESC_SINGERS_REVERSED=Pires chanteurs
-STAT_FORMAT_SINGERS=%0:s \n Score moyen: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Score moyen: %1:d
 
 STAT_DESC_SONGS=Chansons favorites
 STAT_DESC_SONGS_REVERSED=Chansons impopulaires
-STAT_FORMAT_SONGS=%0:s - %1:s \n Chanté %2:dx
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n Chanté %2:dx
 
 STAT_DESC_BANDS=Artistes favoris
 STAT_DESC_BANDS_REVERSED=Artistes impopulaires
-STAT_FORMAT_BANDS=%0:s \n Chansons chantées: %1:d
+STAT_FORMAT_BANDS=%0:s \n\n Chansons chantées: %1:d
 
 PARTY_SELECT_MODE=Mode
 PARTY_MODE_CLASSIC=Classique
