--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Estatísticas detalladas
 STAT_NEXT=Seguinte
 STAT_PREV=Anterior
 STAT_REVERSE=Invertilo orde
-STAT_PAGE=Páxina %0:d de %1:d \n Rexistros %2:d de %3:d
+STAT_PAGE=Páxina %0:d de %1:d \n\n Rexistros %2:d de %3:d
 
 STAT_DESC_SCORES=Puntación
 STAT_DESC_SCORES_REVERSED=Peores puntacións
-STAT_FORMAT_SCORES=%1:d - %0:s\n %3:s - %4:s (%2:s) o %5:s
+STAT_FORMAT_SCORES=%1:d - %0:s\n\n %3:s - %4:s (%2:s) o %5:s
 
 STAT_DESC_SINGERS=Cantantes
 STAT_DESC_SINGERS_REVERSED=Peores cantantes
-STAT_FORMAT_SINGERS=%0:s \n Media: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Media: %1:d
 
 STAT_DESC_SONGS=O máis cantado
 STAT_DESC_SONGS_REVERSED=O menos cantado
-STAT_FORMAT_SONGS=%0:s - %1:s \n cantado %2:d veces
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n cantado %2:d veces
 
 STAT_DESC_BANDS=Grupos populares
 STAT_DESC_BANDS_REVERSED=Grupos menos cantados
-STAT_FORMAT_BANDS=%0:s \n cantado %1:d veces
+STAT_FORMAT_BANDS=%0:s \n\n cantado %1:d veces
 
 PARTY_SELECT_MODE=Modo
 PARTY_MODE_CLASSIC=Clásico
