--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Részletesen
 STAT_NEXT=Következő oldal
 STAT_PREV=Előző oldal
 STAT_REVERSE=Fordított sorrend
-STAT_PAGE=Oldal %0:d ból %1:d \n Bejegyzés %2:d ból %3:d
+STAT_PAGE=Oldal %0:d ból %1:d \n\n Bejegyzés %2:d ból %3:d
 
 STAT_DESC_SCORES=Legjobb Eredmény
 STAT_DESC_SCORES_REVERSED=Alacsony pontszám
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Legjobb Énekesek
 STAT_DESC_SINGERS_REVERSED=Legrosszabb Énekesek
-STAT_FORMAT_SINGERS=%0:s \n Átlag pontszáma: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Átlag pontszáma: %1:d
 
 STAT_DESC_SONGS=Közkedvelt számok
 STAT_DESC_SONGS_REVERSED=Kevésbé kedvelt számok
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx Énekelve
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx Énekelve
 
 STAT_DESC_BANDS=Közkedvelt együttesek
 STAT_DESC_BANDS_REVERSED=Kevésbé kedvelt együttesek
-STAT_FORMAT_BANDS=%0:s \n %1:dx Énekeve
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx Énekeve
 
 PARTY_SELECT_MODE=Mód
 PARTY_MODE_CLASSIC=Klasszikus
