--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Gedetailleerde statistieken
 STAT_NEXT=Volgende Pagina
 STAT_PREV=Vorige Pagina
 STAT_REVERSE=Omgekeerde Volgorde
-STAT_PAGE=Pagina %0:d van de %1:d \n Scores %2:d van de %3:d
+STAT_PAGE=Pagina %0:d van de %1:d \n\n Scores %2:d van de %3:d
 
 STAT_DESC_SCORES=Topscore
 STAT_DESC_SCORES_REVERSED=Laagste scores
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Beste Spelers
 STAT_DESC_SINGERS_REVERSED=Slechtste Spelers
-STAT_FORMAT_SINGERS=%0:s \n Gemiddelde score: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Gemiddelde score: %1:d
 
 STAT_DESC_SONGS=Populairste liedje
 STAT_DESC_SONGS_REVERSED=Minst populaire liedjes
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx gezongen
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx gezongen
 
 STAT_DESC_BANDS=Populairste Artiesten
 STAT_DESC_BANDS_REVERSED=Minst populaire artiesten
-STAT_FORMAT_BANDS=%0:s \n %1:dx gezongen
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx gezongen
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
