--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Detaljert statistikk
 STAT_NEXT=Neste side
 STAT_PREV=Forrige side
 STAT_REVERSE=Bytt rekkefølge
-STAT_PAGE=Side %0:d av %1:d \n Poster %2:d av %3:d
+STAT_PAGE=Side %0:d av %1:d \n\n Poster %2:d av %3:d
 
 STAT_DESC_SCORES=Toppscore
 STAT_DESC_SCORES_REVERSED=Bunnscore
-STAT_FORMAT_SCORES=%0:s - %1:d [%2:s] \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d [%2:s] \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Beste sangere
 STAT_DESC_SINGERS_REVERSED=Dårligste sangere
-STAT_FORMAT_SINGERS=%0:s \n Gjennomsnitts-score: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Gjennomsnitts-score: %1:d
 
 STAT_DESC_SONGS=Mest populære sang
 STAT_DESC_SONGS_REVERSED=Minst populære sang
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx sunget
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx sunget
 
 STAT_DESC_BANDS=Mest populære artist
 STAT_DESC_BANDS_REVERSED=Minst populære artist
-STAT_FORMAT_BANDS=%0:s \n %1:dx Sunget
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx Sunget
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
