--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Подробная статистика
 STAT_NEXT=След. страница
 STAT_PREV=Пред. страница
 STAT_REVERSE=В обр. порядке
-STAT_PAGE=Cтраница %0:d из %1:d \n Yчет %2:d из %3:d
+STAT_PAGE=Cтраница %0:d из %1:d \n\n Yчет %2:d из %3:d
 
 STAT_DESC_SCORES=Лучшие игры
 STAT_DESC_SCORES_REVERSED=Худшие игры
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Лучшие певцы
 STAT_DESC_SINGERS_REVERSED=Худшие певцы
-STAT_FORMAT_SINGERS=%0:s \n Средний счёт: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Средний счёт: %1:d
 
 STAT_DESC_SONGS=Популярные песни
 STAT_DESC_SONGS_REVERSED=Непопулярные песни
-STAT_FORMAT_SONGS=%0:s - %1:s \n звучала %2:dx
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n звучала %2:dx
 
 STAT_DESC_BANDS=Популярные группы
 STAT_DESC_BANDS_REVERSED=Непопулярные группы
-STAT_FORMAT_BANDS=%0:s \n звучала %1:dx
+STAT_FORMAT_BANDS=%0:s \n\n звучала %1:dx
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
