--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Tarkat tilastot
 STAT_NEXT=Seuraava sivu
 STAT_PREV=Edellinen sivu
 STAT_REVERSE=Käänteinen järjestys
-STAT_PAGE=Seite %0:d of %1:d \n %2:d of %3:d
+STAT_PAGE=Seite %0:d of %1:d \n\n %2:d of %3:d
 
 STAT_DESC_SCORES=Korkeimmat pisteet
 STAT_DESC_SCORES_REVERSED=Surikeimmat pisteet
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s] \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Parhaat laulajat
 STAT_DESC_SINGERS_REVERSED=Surkeimmat laulajat
-STAT_FORMAT_SINGERS=%0:s \n Pisteiden keskiarvo: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Pisteiden keskiarvo: %1:d
 
 STAT_DESC_SONGS=Suosituimmat kappaleet
 STAT_DESC_SONGS_REVERSED=Epäsuositut kappaleet
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx Laulettu
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx Laulettu
 
 STAT_DESC_BANDS=Suosituimmat yhtyeet
 STAT_DESC_BANDS_REVERSED=Epäsuosituimmat yhtyeet
-STAT_FORMAT_BANDS=%0:s \n %1:dx Laulettu
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx Laulettu
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
