--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Podrobné statistiky
 STAT_NEXT=Další stránka
 STAT_PREV=Předchozí stránka
 STAT_REVERSE=Opačné pořadí
-STAT_PAGE=Strana %0:d z %1:d stránek \n Záznamů %2:d z %3:d
+STAT_PAGE=Strana %0:d z %1:d stránek \n\n Záznamů %2:d z %3:d
 
 STAT_DESC_SCORES=Nejvyšší skóre
 STAT_DESC_SCORES_REVERSED=Nejnižší skóre
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Nejlepší zpěváci
 STAT_DESC_SINGERS_REVERSED=Nejhorší zpěváci
-STAT_FORMAT_SINGERS=%0:s \n Průměrné skóre: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Průměrné skóre: %1:d
 
 STAT_DESC_SONGS=Nejoblíbenější skladba
 STAT_DESC_SONGS_REVERSED=Nejneoblíbenější skladba
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx zpívána
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx zpívána
 
 STAT_DESC_BANDS=Nejoblíbenější kapela
 STAT_DESC_BANDS_REVERSED=Nejneoblíbenější kapela
-STAT_FORMAT_BANDS=%0:s \n %1:dx zpíváno
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx zpíváno
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
