--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=Λεπτομερή στατιστικά
 STAT_NEXT=Επόμενη Σελίδα
 STAT_PREV=Προηγούμενη σελίδα
 STAT_REVERSE=Αντίστροφα
-STAT_PAGE=Seite %0:d από %1:d σελίδες \n %2:d of %3:d εισαγωγές
+STAT_PAGE=Seite %0:d από %1:d σελίδες \n\n %2:d of %3:d εισαγωγές
 
 STAT_DESC_SCORES=Υψηλότερες Βαθμολογίες
 STAT_DESC_SCORES_REVERSED=Χαμηλότερες βαθμολογίες
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=Καλύτεροι τραγουδιστές
 STAT_DESC_SINGERS_REVERSED=Χειρότεροι τραγουδιστές
-STAT_FORMAT_SINGERS=%0:s \n Μέσος όρος βαθμολογίας: %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n Μέσος όρος βαθμολογίας: %1:d
 
 STAT_DESC_SONGS=Πιο δημοφιλή τραγούδια
 STAT_DESC_SONGS_REVERSED=Λιγότερο δημοφιλή τραγούδια
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx τραγουδήθηκαν
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx τραγουδήθηκαν
 
 STAT_DESC_BANDS=Πιο δημοφιλής μπάντες
 STAT_DESC_BANDS_REVERSED=Λιγότερο δημοφιλής μπάντες
-STAT_FORMAT_BANDS=%0:s \n %1:dx τραγουδήθηκαν
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx τραγουδήθηκαν
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
