--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -539,23 +539,23 @@ STAT_DETAIL_WHEREAMI=统计详情
 STAT_NEXT=下一页
 STAT_PREV=前一页
 STAT_REVERSE=倒序
-STAT_PAGE= %1:d 页中的第 %0:d 页 \n %3:d 条目中的 %2:d
+STAT_PAGE= %1:d 页中的第 %0:d 页 \n\n %3:d 条目中的 %2:d
 
 STAT_DESC_SCORES=高分
 STAT_DESC_SCORES_REVERSED=低分
-STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n (%3:s - %4:s)
+STAT_FORMAT_SCORES=%0:s - %1:d  [%2:s]  %5:s \n\n (%3:s - %4:s)
 
 STAT_DESC_SINGERS=最佳歌手
 STAT_DESC_SINGERS_REVERSED=最差歌手
-STAT_FORMAT_SINGERS=%0:s \n 平均分： %1:d
+STAT_FORMAT_SINGERS=%0:s \n\n 平均分： %1:d
 
 STAT_DESC_SONGS=最热门歌曲
 STAT_DESC_SONGS_REVERSED=最冷门歌曲
-STAT_FORMAT_SONGS=%0:s - %1:s \n %2:dx 唱过
+STAT_FORMAT_SONGS=%0:s - %1:s \n\n %2:dx 唱过
 
 STAT_DESC_BANDS=最热门乐队
 STAT_DESC_BANDS_REVERSED=最冷门乐队
-STAT_FORMAT_BANDS=%0:s \n %1:dx 唱过
+STAT_FORMAT_BANDS=%0:s \n\n %1:dx 唱过
 
 ;TODO: PARTY_SELECT_MODE=Mode
 ;TODO: PARTY_MODE_CLASSIC=Classic
