--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -17,7 +17,6 @@ SING_JUKEBOX_DESC=Luister naar mijn verzameling
 SING_STATS=Stats
 SING_STATS_DESC=Bekijk de statistieken
 
-SING_OPTIONS=Spelopties
 SING_OPTIONS_DESC=Verander de spelopties
 
 SING_EXIT=Stoppen
@@ -707,7 +706,7 @@ C_MICROPHONES=Opname
 ;TODO: C_NO_INTERNET_CONNECTION=No internet connection
 
 ;TODO: C_OPEN_PLAYLIST=Open playlist
-;TODO: C_OPTIONS=Options
+C_OPTIONS=Spelopties
 
 ;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
