--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -17,7 +17,6 @@ SING_JUKEBOX_DESC=escute minhas musicas
 SING_STATS=Estatísticas
 SING_STATS_DESC=Ver Estatísticas
 
-SING_OPTIONS=Opções de Jogo
 SING_OPTIONS_DESC=Alterar configurações de Jogo
 
 SING_EXIT=Sair
@@ -707,7 +706,7 @@ C_LYRICS=Letras
 ;TODO: C_NO_INTERNET_CONNECTION=No internet connection
 
 ;TODO: C_OPEN_PLAYLIST=Open playlist
-;TODO: C_OPTIONS=Options
+C_OPTIONS=Opções
 
 ;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
