--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -17,7 +17,6 @@ SING_MULTI_DESC=петь в режиме вечеринки
 SING_STATS=Статистика
 SING_STATS_DESC=смотреть статистику
 
-SING_OPTIONS=Настройки
 SING_OPTIONS_DESC=изменить настройки игры
 
 SING_EXIT=Выход
@@ -707,7 +706,7 @@ C_MICROPHONES=запись
 ;TODO: C_NO_INTERNET_CONNECTION=No internet connection
 
 ;TODO: C_OPEN_PLAYLIST=Open playlist
-;TODO: C_OPTIONS=Options
+C_OPTIONS=Настройки
 
 ;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
