--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -17,7 +17,6 @@ SING_MULTI_DESC=Cântă în grup
 SING_STATS=Statistici
 SING_STATS_DESC=Vezi statistici
 
-SING_OPTIONS=Opţiuni de joc
 SING_OPTIONS_DESC=Modifică opţiunile de joc
 
 SING_EXIT=Ieşire
@@ -707,7 +706,7 @@ C_MICROPHONES=Microfoane
 ;TODO: C_NO_INTERNET_CONNECTION=No internet connection
 
 ;TODO: C_OPEN_PLAYLIST=Open playlist
-;TODO: C_OPTIONS=Options
+C_OPTIONS=Opţiuni
 
 ;TODO: C_PLAYER=Player
 ;TODO: C_PLAYERS=Players
